[package]
name = "git2-time-chrono-ext"
version = "0.2.0"
edition = "2024"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
description = "Rust extension library to convert `git2::Time` to `chrono`"
keywords = ["git", "git2", "time", "chrono", "extension"]
repository = "https://github.com/kojiishi/git2-time-chrono-ext"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore", ".vscode", "Taskfile.yml"]

[dependencies]
thiserror = "1.0"
chrono = "0.4.44"
git2 = { version = "0.20.4", default-features = false }
